# Cranpose

./: 1.tmp  AGENTS.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  NEXT_TASK.md  README.md  SNAPSHOTS_AND_SLOTS.md  modifier_match_with_jc.md  run_robot_test.sh  test_fill_max_width.rs  test_layout_debug.rs
.github/workflows/: publish.yml
apps/android-demo/: AndroidManifest.xml  Cargo.toml
apps/android-demo/android/app/src/main/: AndroidManifest.xml
apps/android-demo/src/: lib.rs
apps/desktop-demo/: Cargo.toml  README.md  WEB_REQUIREMENTS.md  build-web.sh  index.html
apps/desktop-demo/examples/: robot_demo.rs  test_recorder.rs
apps/desktop-demo/robot-runners/: robot_content_type_reuse.rs  robot_fling.rs  robot_fling_edge_cases.rs  robot_fling_interrupt.rs  robot_fling_precise.rs  robot_layout_validation.rs  robot_lazy_complex_scroll.rs  robot_lazy_duplication_bug.rs  robot_lazy_fixes.rs  robot_lazy_infinite_scroll.rs  robot_lazy_list.rs  robot_lazy_max_demo.rs  robot_lazy_max_jump.rs  robot_lazy_perf.rs  robot_lazy_perf_validation.rs  robot_lazy_recursive_composition.rs  robot_lazy_stats.rs  robot_lazy_tab_test.rs  robot_lazy_varheight_lifecycle.rs  robot_lazy_variable_height.rs  robot_perf_harness.rs  robot_positioned_boxes_after_lazy_list.rs  robot_progress_bar.rs  robot_recursive_layout.rs  robot_subcompose_invalidation.rs  robot_subcompose_lazy.rs
apps/desktop-demo/src/: app.rs  lib.rs  minesweeper.rs
apps/desktop-demo/src/app/: lazy_list.rs  mineswapper2.rs  web_fetch.rs
apps/desktop-demo/src/tests/: conditional_text_test.rs  counter_app_test.rs  main_tests.rs  mod.rs  robot_lazy_reverse_layout.rs
apps/desktop-demo/tests/: modifier_showcase_layout_tests.rs  modifier_showcase_rendering_tests.rs  modifier_showcase_tests.rs  robot_scroll_test.rs
apps/isolated-demo/: Cargo.toml  README.md  build-web.sh  index.html
apps/isolated-demo/android/: .gitignore  settings.gradle.kts
apps/isolated-demo/android/app/: build.gradle.kts  proguard-rules.pro
apps/isolated-demo/src/: app.rs  fonts.rs  lib.rs  main.rs
apps/web-demo/: Cargo.toml  README.md  build.sh  index.html
apps/web-demo/.cargo/: config.toml
apps/web-demo/src/: lib.rs
crates/compose-app/: Cargo.toml
crates/compose-app-shell/src/: lib.rs
crates/compose-app/src/: android.rs  desktop.rs  launcher.rs  lib.rs  recorder.rs  robot.rs  web.rs
crates/compose-core/: Cargo.toml
crates/compose-core/src/: chunked_slot_storage.rs  collections.rs  composer_context.rs  hash.rs  hierarchical_slot_storage.rs  lib.rs  runtime.rs  slot_backend.rs  slot_table.rs  snapshot_pinning.rs  snapshot_state_observer.rs  snapshot_weak_set.rs  split_slot_storage.rs  state.rs  subcompose.rs
crates/compose-foundation/: Cargo.toml
crates/compose-foundation/src/: lib.rs  modifier.rs  modifier_helpers.rs  scroll.rs  scrollable.rs  velocity_tracker.rs
crates/compose-platform/desktop-winit/: Cargo.toml
crates/compose-render/wgpu/: Cargo.toml
crates/compose-testing/src/: lib.rs  robot.rs  test_renderer.rs  test_rule.rs
crates/compose-ui-layout/src/: core.rs
crates/compose-ui/benches/: pipeline.rs
crates/compose-ui/examples/: modifier_demo.rs  modifier_showcase.rs
crates/compose-ui/src/: debug.rs  fling_animation.rs  focus_dispatch.rs  lib.rs  modifier_nodes.rs  pointer_dispatch.rs  render_state.rs  renderer.rs  scroll.rs  scroll_modifier_node.rs  subcompose_layout.rs  text_modifier_node.rs
crates/compose-ui/tests/: button_clickable_test.rs  composition_switching_test.rs  conditional_rendering_test.rs  integration_modifier_tests.rs  interaction_repro_test.rs  intrinsics_test.rs  modifier_offset_test.rs  modifier_reuse_test.rs  modifier_size_position_test.rs  pointer_hover_gradient_test.rs  pointer_input_end_to_end_test.rs  pointer_input_integration_test.rs  render_invalidation_test.rs
crates/cranpose/: Cargo.toml  README.md
crates/cranpose-animation/: Cargo.toml  README.md
crates/cranpose-app-shell/: Cargo.toml  README.md
crates/cranpose-app-shell/src/: lib.rs
crates/cranpose-assets/: Cargo.toml  README.md
crates/cranpose-core/: Cargo.toml  README.md
crates/cranpose-core/src/: lib.rs  snapshot_weak_set.rs  state.rs
crates/cranpose-core/src/snapshot_v2/: global.rs  integration_tests.rs  mod.rs  mutable.rs  nested.rs  runtime.rs
crates/cranpose-core/src/tests/: lib_tests.rs
crates/cranpose-foundation/: Cargo.toml  README.md
crates/cranpose-foundation/src/: modifier.rs
crates/cranpose-macros/: Cargo.toml  README.md
crates/cranpose-macros/src/: lib.rs
crates/cranpose-platform/android/: Cargo.toml  README.md
crates/cranpose-platform/desktop-winit/: Cargo.toml  README.md
crates/cranpose-platform/web/: Cargo.toml  README.md
crates/cranpose-render/common/: Cargo.toml  README.md
crates/cranpose-render/common/src/: lib.rs
crates/cranpose-render/pixels/: Cargo.toml
crates/cranpose-render/pixels/src/: pipeline.rs  scene.rs
crates/cranpose-render/wgpu/: Cargo.toml  README.md
crates/cranpose-render/wgpu/src/: lib.rs  pipeline.rs  scene.rs
crates/cranpose-runtime-std/: Cargo.toml  README.md
crates/cranpose-testing/: Cargo.toml  README.md
crates/cranpose-testing/src/: robot_assertions.rs  robot_helpers.rs
crates/cranpose-ui/: Cargo.toml  README.md
crates/cranpose-ui-graphics/: Cargo.toml  README.md
crates/cranpose-ui-layout/: Cargo.toml  README.md
crates/cranpose-ui/src/: modifier_nodes.rs  subcompose_layout.rs  text_modifier_node.rs
crates/cranpose-ui/src/layout/: mod.rs
crates/cranpose-ui/src/modifier/: chain.rs  mod.rs  slices.rs
crates/cranpose-ui/src/modifier/tests/: modifier_tests.rs
crates/cranpose-ui/src/tests/: async_runtime_full_layout_test.rs  modifier_nodes_tests.rs
crates/cranpose-ui/src/widgets/: basic_text_field.rs  box_widget.rs  button.rs  column.rs  lazy_list.rs  row.rs  spacer.rs  text.rs
crates/cranpose-ui/src/widgets/nodes/: layout_node.rs  mod.rs
crates/cranpose/src/: android.rs  desktop.rs  launcher.rs  lib.rs  present_mode.rs
docs/: ARCHITECTURE.md  lazy_code_review.md  lazy_list_doc.md  lazysubcompose.md
(+87 files in other folders)
