[package]
name = "web-demo"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[features]
default = ["renderer-wgpu", "web"]
renderer-wgpu = ["compose-app/renderer-wgpu"]
web = ["compose-app/web"]

[dependencies]
compose-app = { path = "../../crates/compose-app", default-features = false }
compose-animation = { path = "../../crates/compose-animation" }
compose-core = { path = "../../crates/compose-core" }
compose-ui = { path = "../../crates/compose-ui" }
compose-foundation = { path = "../../crates/compose-foundation" }
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
console_error_panic_hook = "0.1"
log = "0.4"
wasm-logger = "0.2"
getrandom = { version = "0.3", features = ["wasm_js"] }

[dev-dependencies]
compose-macros = { path = "../../crates/compose-macros" }
