[package]
name = "cranpose-animation"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
keywords.workspace = true
categories.workspace = true
readme = "README.md"
description = "Animation system for Cranpose"

[dependencies]
cranpose-core = { workspace = true }

[features]
default = []
