[package]
name = "cranpose-assets"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
keywords.workspace = true
categories.workspace = true
readme.workspace = true
description = "Asset loading and management utilities for Cranpose"

[dependencies]
