[package]
name = "cranpose-core"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
keywords.workspace = true
categories.workspace = true
readme.workspace = true
description = "Core runtime for a Jetpack Compose inspired UI framework in Rust"

[dependencies]
futures-task = "0.3"
ahash = "0.8.12"
rustc-hash = "2.1"
smallvec = "1.15.1"
log = "0.4"

[features]
default = []
std-hash = []

[dev-dependencies]
cranpose-macros = { workspace = true }
