[package]
name = "cranpose-foundation"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
keywords.workspace = true
categories.workspace = true
readme = "README.md"
description = "Modifiers, nodes, and foundation elements for Cranpose"

[dependencies]
cranpose-core = { workspace = true }
cranpose-macros = { workspace = true }
cranpose-ui-graphics = { workspace = true }
cranpose-ui-layout = { workspace = true }
smallvec = "1.13"
web-time = "1.1"
log = "0.4"
rustc-hash = "2.1.1"

[features]
default = []
