[package]
name = "cranpose-macros"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Procedural macros for Cranpose"

[lib]
proc-macro = true

[dependencies]
proc-macro-crate = "3.4.0"
proc-macro2 = "1"
quote = "1"
syn = { version = "2", features = ["full"] }
