[package]
name = "cranpose-runtime-std"
version.workspace = true
edition.workspace = true
homepage.workspace = true
authors.workspace = true
keywords.workspace = true
categories.workspace = true
readme = "README.md"
license.workspace = true
description = "Standard library backed runtime services for Cranpose"

[dependencies]
cranpose-core = { workspace = true }
