[package]
name = "cranpose-testing"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
keywords.workspace = true
categories.workspace = true
readme.workspace = true
description = "Testing utilities and harness for Cranpose"

[dependencies]
cranpose-core = { workspace = true }
cranpose-foundation = { workspace = true }
cranpose-ui = { workspace = true }
cranpose-app-shell = { workspace = true }
cranpose-render-common = { workspace = true }
cranpose-ui-graphics = { workspace = true }

# Optional dependencies for real app testing
cranpose = { workspace = true, features = ["robot"], optional = true }

[dev-dependencies]
cranpose-macros = { workspace = true }
cranpose-ui-layout = { workspace = true }

[features]
default = []
# Enable real app testing with actual rendering (requires display/window system)
# This uses the REAL desktop app runner from cranpose
robot-app = ["cranpose"]
