[package]
name = "cranpose-ui-graphics"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
keywords.workspace = true
categories.workspace = true
readme.workspace = true
description = "Pure math/data for drawing & units in Cranpose"

[dependencies]

[features]
default = []
