[package]
name = "cranpose-ui-layout"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
keywords.workspace = true
categories.workspace = true
readme.workspace = true
description = "Layout contracts & policies for Cranpose"

[dependencies]
cranpose-ui-graphics = { workspace = true }
cranpose-core = { workspace = true }

[features]
default = []
