[package]
name = "cranpose-ui"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
keywords.workspace = true
categories.workspace = true
readme.workspace = true
description = "UI primitives for Cranpose"

[dependencies]
cranpose-core = { workspace = true }
cranpose-macros = { workspace = true }
cranpose-runtime-std = { workspace = true }
cranpose-foundation = { workspace = true }
cranpose-animation = { workspace = true }
cranpose-ui-layout = { workspace = true }
cranpose-ui-graphics = { workspace = true }
indexmap = "=2.7.1"
smallvec = "1.13"
futures-task = "0.3"
# WASM-compatible time - web-time is what winit uses internally
web-time = "1.1"
log = "0.4"

[features]
default = []
# Enable test helpers like last_fling_velocity() for robot test verification.
# This adds global state for cross-thread test access, so only enable in test builds.
test-helpers = []

[dev-dependencies]
criterion = "0.5"

[[bench]]
name = "pipeline"
harness = false
