[package]
name = "cranpose-platform-android"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
keywords.workspace = true
categories.workspace = true
readme = "README.md"
description = "Android platform adapter for Cranpose"

[dependencies]
cranpose-ui-graphics = { workspace = true }
