[package]
name = "cranpose-platform-desktop-winit"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
keywords.workspace = true
categories.workspace = true
readme.workspace = true
description = "Desktop winit platform adapter for Cranpose"

[dependencies]
winit = "0.31.0-beta.2"
cranpose-foundation = { workspace = true }
cranpose-ui-graphics = { workspace = true }
