[package]
name = "cranpose-render-common"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
keywords.workspace = true
categories.workspace = true
readme = "README.md"
description = "Common rendering contracts for Cranpose"

[dependencies]
cranpose-foundation = { workspace = true }
cranpose-ui-graphics = { workspace = true }
cranpose-ui = { workspace = true }
cranpose-core = { workspace = true }
