[package]
name = "cranpose-render-pixels"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Pixels renderer backend for Cranpose"

[dependencies]
cranpose-render-common = { workspace = true }
cranpose-ui = { workspace = true }
cranpose-core = { workspace = true }
cranpose-ui-graphics = { workspace = true }
cranpose-foundation = { workspace = true }
once_cell = "1.18"
rusttype = "0.9"
log = "0.4"
lru = "0.12"
