[package]
name = "cranpose-render-wgpu"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
keywords.workspace = true
categories.workspace = true
readme.workspace = true
description = "WGPU renderer backend for Cranpose"

[dependencies]
cranpose-render-common = { workspace = true }
cranpose-ui-graphics = { workspace = true }
cranpose-foundation = { workspace = true }
cranpose-ui = { workspace = true }
cranpose-core = { workspace = true }
# webgl feature enables WebGL backend for WASM builds
# Default features include platform-appropriate backends (Vulkan/Metal/DX12/GLES)
wgpu = { version = "25.0", features = ["webgl"] }
bytemuck = { version = "1.14", features = ["derive"] }
glyphon = "0.9"
log = "0.4"
lru = "0.12"
rustc-hash = "2.1.1"
